--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <h1>Peacock's Intern Paper Post</h1>
             <p>Fly with Peacock's Intern, the regal peacock, in Peacock's Intern Paper Post! Rock the Crown of Liberty, dodge obstacles, and deliver newspapers with flair in this vibrant, feathered frenzy!</p>
             <div class="controls">
-                <p><strong>Controls:</strong></p>
-                <p>Arrow Keys or WASD - Move</p>
-                <p>Spacebar - Throw Newspaper</p>
+                <p><strong>🎮 Controls:</strong></p>
+                <p><strong>🖥️ Desktop:</strong> Arrow Keys or WASD - Move<br/>Spacebar - Throw Newspaper</p>
+                <p><strong>📱 Mobile:</strong> Swipe to move<br/>Tap to throw newspaper</p>
             </div>
             <button id="startButton">Start Game</button>
         </div>
